# hd_map_builder

./: Dockerfile  README.md  pyproject.toml  requirements.txt
data/: sample_frames.json
data/calib/: sample_calib.yaml
docs/: architecture.md  benchmarks.md  project_summary.md  research_notes.md  simulation_plan.md
docs/media/: README.md
hd_map_builder/: __init__.py
hd_map_builder/localization/: __init__.py  pose_graph.py  poses.py
hd_map_builder/mapping/: __init__.py  multi_sensor_fusion.py  occupancy_grid.py
hd_map_builder/neural_repr/: __init__.py  dataset.py  export.py  implicit_map.py  onnx_runtime.py  training.py
hd_map_builder/sensors/: __init__.py  bag_reader.py  calibration.py
logs/: implicit_decoder.onnx  implicit_decoder.onnx.data  sim_circle_metrics.json  sim_metrics_latest.json
pipeline/: __init__.py  localization_publisher.py  localization_stream.py  offline_builder.py  replay_cli.py  ros_localization_node.py
scripts/: export_map.py  export_onnx.py  ort_profile.py  profile_decoder.py  replay_rosbag.py  ros_localization_node.py  run_tests.sh  simulate_scenario.py  stream_localization.py  train_implicit.py
tests/: conftest.py  test_bag_reader.py  test_calibration.py  test_export_map.py  test_export_profile.py  test_localization_stream.py  test_multi_sensor_fusion.py  test_neural_repr.py  test_occupancy_grid.py  test_offline_builder.py  test_onnx_runtime.py  test_pipeline_cli.py  test_pose_graph.py  test_replay_rosbag.py  test_ros_localization_node.py  test_simulation_cli.py  test_training.py
