[project]
name = "hd-map-builder"
version = "0.1.0"
description = "Neural multi-sensor HD map builder prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "rosbags>=0.9",
]

[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"
